--- a/Pràctiques/Dígits_control_IBAN.ipynb
+++ b/Pràctiques/Dígits_control_IBAN.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "CA5vPylbd9iP"
       },
@@ -60,12 +60,27 @@
         "    -------\n",
         "    digit1: int\n",
         "    \"\"\"\n",
+        "   cadena = str(num)\n",
+        "   potencia = 2\n",
+        "   suma1 = 0\n",
+        "   suma2 = 0\n",
+        "   for i in cadena:\n",
+        "         suma1 += int(i)*((2**potencia)%11)\n",
+        "         potencia +=1\n",
+        "   suma1 = suma1%11\n",
+        "   suma2 = 11-suma1\n",
+        "   if suma2 == 10:\n",
+        "      digit1 = 1\n",
+        "   elif suma2 == 11:\n",
+        "      digit1 = 0\n",
+        "   else:\n",
+        "      digit1 = suma2\n",
         "   return digit1"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -103,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "xdBXBMa2eFqs"
       },
@@ -121,12 +136,28 @@
         "    -------\n",
         "    digit2: int\n",
         "    \"\"\"\n",
+        "   cadena = str(num)\n",
+        "   suma1 = 0\n",
+        "   suma2 = 0\n",
+        "   potencia = 0\n",
+        "   for i in cadena:\n",
+        "      suma1 += int(i)*((2**potencia)%11)\n",
+        "      potencia +=1\n",
+        "   suma1 = suma1%11\n",
+        "   suma2 = 11-suma1\n",
+        "   if suma2 == 10:\n",
+        "      digit2 = 1\n",
+        "   elif suma2 == 11:\n",
+        "      digit2 = 0\n",
+        "   else:\n",
+        "      digit2 = suma2\n",
+        "\n",
         "   return digit2"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -146,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 55,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -161,12 +192,19 @@
         "    Returns\n",
         "    -------\n",
         "    valid: boolean\n",
-        "    \"\"\""
+        "    \"\"\"\n",
+        "    b = False\n",
+        "    num = num.replace(\" \",\"\")\n",
+        "    cadena1 = num[0:8]\n",
+        "    cadena2 = num[10:20]\n",
+        "    if (int(num[8])==digit_control1(cadena1) and int(num[9])==digit_control2(cadena2)):\n",
+        "        b = True\n",
+        "    return b"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -177,6 +215,13 @@
         "assert valid_IBAN('2100 0813 6712 3456 7891') == False\n",
         "assert valid_IBAN('00043006 72 2100081367') == True"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -188,7 +233,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.2"
     }
   },
   "nbformat": 4,
