--- a/Pràctiques/4.5.ipynb
+++ b/Pràctiques/4.5.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {
     "id": "XeOUW_g2ZtJL"
    },
@@ -87,6 +87,7 @@
     "        distance_matrix[i][0] = i\n",
     "    for j in range (len(text)+1):\n",
     "        distance_matrix[0][j] = j\n",
+    "    print(distance_matrix)\n",
     "    for i in range(1, len(patro)+1):\n",
     "        for j in range(1,len(text)+1):\n",
     "            deletion = distance_matrix[i-1][j] + dlt\n",
@@ -96,8 +97,11 @@
     "            else:\n",
     "                substitution = distance_matrix[i-1][j-1]+1\n",
     "            distance_matrix[i][j] = min(deletion,insertion,substitution)\n",
-    "\n",
-    "    return min(distance_matrix[max_row-1])\n",
+    "    print(distance_matrix)\n",
+    "    distancia = min([j for j in distance_matrix[len(text)+1]])\n",
+    "    print([j for j in distance_matrix[len(text)+1]])\n",
+    "    print (distancia)\n",
+    "    return distancia\n",
     "\n",
     "\n",
     "\n",
@@ -117,37 +121,41 @@
     "    \"\"\"\n",
     "    llista = []\n",
     "    linia = 0\n",
-    "    distanciafinal = 0\n",
+    "    distanciafinal = -1\n",
+    "    distanciactual = 0\n",
     "    with open(fitxer, 'r') as file:\n",
-    "        cadena = file.read()\n",
-    "        for i,line in enumerate(cadena):\n",
-    "            line = line.rstrip\n",
-    "            llista.append(levenstheinsmithwaterman(patro,line))\n",
-    "            if levenstheinsmithwaterman(patro,line) == min(llista):\n",
-    "                linia = i\n",
-    "                distanciafinal = levenstheinsmithwaterman(patro,line)\n",
-    "\n",
+    "        for i,line in enumerate(file,1):\n",
+    "            line = line.rstrip(\"\\n\")\n",
+    "            distanciactual = levenstheinsmithwaterman(patro,line)\n",
+    "            if distanciafinal == -1:\n",
+    "                linia = i+1\n",
+    "                distanciafinal = distanciactual\n",
+    "            elif distanciactual<distanciafinal:\n",
+    "                linia = i+1\n",
+    "                distanciafinal = distanciactual\n",
+    "    print(linia)\n",
+    "    print(distanciafinal)\n",
     "    return linia, distanciafinal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {
     "id": "zJxdjiMtZtJL"
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "object of type 'builtin_function_or_method' has no len()",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[43mdna\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAGATACATTAGACAATAGAGATGTGGTC\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m32\u001b[39m, \u001b[38;5;241m11\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m dna(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGTCAGTCTGGCCTTGCCATTGGTGCCACCA\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m352\u001b[39m, \u001b[38;5;241m11\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m dna(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTACCGAGAAGCTGGATTACAGCATGTACCATCAT\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m233\u001b[39m, \u001b[38;5;241m13\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [13], line 64\u001b[0m, in \u001b[0;36mdna\u001b[0;34m(patro, fitxer)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i,line \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(cadena):\n\u001b[1;32m     63\u001b[0m     line \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39mrstrip\n\u001b[0;32m---> 64\u001b[0m     llista\u001b[38;5;241m.\u001b[39mappend(\u001b[43mlevenstheinsmithwaterman\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpatro\u001b[49m\u001b[43m,\u001b[49m\u001b[43mline\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     65\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m levenstheinsmithwaterman(patro,line) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mmin\u001b[39m(llista):\n\u001b[1;32m     66\u001b[0m         linia \u001b[38;5;241m=\u001b[39m i\n",
-      "Cell \u001b[0;32mIn [13], line 22\u001b[0m, in \u001b[0;36mlevenstheinsmithwaterman\u001b[0;34m(patro, text, dlt, insr, subs)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(patro)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m     21\u001b[0m     columna \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m---> 22\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[1;32m     23\u001b[0m         columna\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     24\u001b[0m     distance_matrix\u001b[38;5;241m.\u001b[39mappend(columna)\n",
-      "\u001b[0;31mTypeError\u001b[0m: object of type 'builtin_function_or_method' has no len()"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[45], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[43mdna\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAGATACATTAGACAATAGAGATGTGGTC\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m32\u001b[39m, \u001b[38;5;241m11\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m dna(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGTCAGTCTGGCCTTGCCATTGGTGCCACCA\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m352\u001b[39m, \u001b[38;5;241m11\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m dna(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTACCGAGAAGCTGGATTACAGCATGTACCATCAT\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m233\u001b[39m, \u001b[38;5;241m13\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[44], line 65\u001b[0m, in \u001b[0;36mdna\u001b[1;34m(patro, fitxer)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i,line \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(file,\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m     64\u001b[0m     line \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39mrstrip(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 65\u001b[0m     distanciactual \u001b[38;5;241m=\u001b[39m \u001b[43mlevenstheinsmithwaterman\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpatro\u001b[49m\u001b[43m,\u001b[49m\u001b[43mline\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     66\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m distanciafinal \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     67\u001b[0m         linia \u001b[38;5;241m=\u001b[39m i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\n",
+      "Cell \u001b[1;32mIn[44], line 38\u001b[0m, in \u001b[0;36mlevenstheinsmithwaterman\u001b[1;34m(patro, text, dlt, insr, subs)\u001b[0m\n\u001b[0;32m     36\u001b[0m             substitution \u001b[38;5;241m=\u001b[39m distance_matrix[i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][j\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     37\u001b[0m         distance_matrix[i][j] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(deletion,insertion,substitution)\n\u001b[1;32m---> 38\u001b[0m distancia \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m([j \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdistance_matrix\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m!=\u001b[39m\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m (distancia)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m distancia\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -329,21 +337,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 2, 3, 4, 5], [1, 0, 0, 0, 0, 0], [2, 0, 0, 0, 0, 0], [3, 0, 0, 0, 0, 0], [4, 0, 0, 0, 0, 0], [5, 0, 0, 0, 0, 0], [6, 0, 0, 0, 0, 0]]\n",
+      "[[0, 1, 2, 3, 4, 5], [1, 1, 2, 3, 4, 5], [2, 2, 2, 3, 4, 5], [3, 3, 3, 0, 2, 4], [4, 4, 4, 2, 1, 3], [5, 5, 0, 2, 3, 0], [6, 6, 2, 0, 2, 2]]\n",
+      "[6, 6, 2, 0, 2, 2]\n",
+      "0\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]"
+       "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "levenstheinsmithwaterman(\"BARBER\",\"VERVE\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -360,7 +380,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
