--- a/Pràctiques/4.5.ipynb
+++ b/Pràctiques/4.5.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "metadata": {
     "id": "XeOUW_g2ZtJL"
    },
@@ -85,22 +85,21 @@
     "        distance_matrix.append(columna)\n",
     "    for i in range (len(patro)+1):\n",
     "        distance_matrix[i][0] = i\n",
+    "    \"\"\"\n",
+    "    S'inicialitza el text amb 0, doncs es vol trobar la funció que més s'assembla.\n",
     "    for j in range (len(text)+1):\n",
     "        distance_matrix[0][j] = j\n",
-    "    print(distance_matrix)\n",
+    "    \"\"\"\n",
     "    for i in range(1, len(patro)+1):\n",
     "        for j in range(1,len(text)+1):\n",
     "            deletion = distance_matrix[i-1][j] + dlt\n",
     "            insertion = distance_matrix[i][j-1] + insr\n",
     "            if patro[i-1] == text[j-1]:\n",
-    "                substitution = distance_matrix[i][j]\n",
+    "                substitution = distance_matrix[i-1][j-1]\n",
     "            else:\n",
     "                substitution = distance_matrix[i-1][j-1]+1\n",
     "            distance_matrix[i][j] = min(deletion,insertion,substitution)\n",
-    "    print(distance_matrix)\n",
-    "    distancia = min([j for j in distance_matrix[len(text)+1]])\n",
-    "    print([j for j in distance_matrix[len(text)+1]])\n",
-    "    print (distancia)\n",
+    "    distancia = min([j for j in distance_matrix[len(patro)]])\n",
     "    return distancia\n",
     "\n",
     "\n",
@@ -128,10 +127,10 @@
     "            line = line.rstrip(\"\\n\")\n",
     "            distanciactual = levenstheinsmithwaterman(patro,line)\n",
     "            if distanciafinal == -1:\n",
-    "                linia = i+1\n",
+    "                linia = i\n",
     "                distanciafinal = distanciactual\n",
     "            elif distanciactual<distanciafinal:\n",
-    "                linia = i+1\n",
+    "                linia = i\n",
     "                distanciafinal = distanciactual\n",
     "    print(linia)\n",
     "    print(distanciafinal)\n",
@@ -140,22 +139,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
    "metadata": {
     "id": "zJxdjiMtZtJL"
    },
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[45], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[43mdna\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAGATACATTAGACAATAGAGATGTGGTC\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m32\u001b[39m, \u001b[38;5;241m11\u001b[39m)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m dna(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGTCAGTCTGGCCTTGCCATTGGTGCCACCA\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m352\u001b[39m, \u001b[38;5;241m11\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m dna(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTACCGAGAAGCTGGATTACAGCATGTACCATCAT\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m==\u001b[39m (\u001b[38;5;241m233\u001b[39m, \u001b[38;5;241m13\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[44], line 65\u001b[0m, in \u001b[0;36mdna\u001b[1;34m(patro, fitxer)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i,line \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(file,\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m     64\u001b[0m     line \u001b[38;5;241m=\u001b[39m line\u001b[38;5;241m.\u001b[39mrstrip(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 65\u001b[0m     distanciactual \u001b[38;5;241m=\u001b[39m \u001b[43mlevenstheinsmithwaterman\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpatro\u001b[49m\u001b[43m,\u001b[49m\u001b[43mline\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     66\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m distanciafinal \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     67\u001b[0m         linia \u001b[38;5;241m=\u001b[39m i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\n",
-      "Cell \u001b[1;32mIn[44], line 38\u001b[0m, in \u001b[0;36mlevenstheinsmithwaterman\u001b[1;34m(patro, text, dlt, insr, subs)\u001b[0m\n\u001b[0;32m     36\u001b[0m             substitution \u001b[38;5;241m=\u001b[39m distance_matrix[i\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m][j\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     37\u001b[0m         distance_matrix[i][j] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m(deletion,insertion,substitution)\n\u001b[1;32m---> 38\u001b[0m distancia \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmin\u001b[39m([j \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdistance_matrix\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m!=\u001b[39m\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m     39\u001b[0m \u001b[38;5;28mprint\u001b[39m (distancia)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m distancia\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n",
+      "11\n",
+      "352\n",
+      "11\n",
+      "233\n",
+      "13\n"
      ]
     }
    ],
@@ -337,33 +335,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def levensthein (patro,text):\n",
+    "    longitud_patro = len(patro)+1\n",
+    "    longitud_text = len(text)+1\n",
+    "    distancia = [[0 for i in range(longitud_patro)] for j in range(longitud_text)]\n",
+    "    for i in range(longitud_patro):\n",
+    "        distancia[0][i] = i\n",
+    "    for j in range(longitud_text):\n",
+    "        distancia[j][0] = j\n",
+    "    for j in range(1,longitud_text):\n",
+    "        for i in range(1,longitud_patro):\n",
+    "            insersio = distancia[j-1][i]+1\n",
+    "            eliminacio = distancia[j][i-1]+1\n",
+    "            substitucio = distancia[j-1][i-1]\n",
+    "            if patro[i-1] != text[j-1]:\n",
+    "                substitucio += 1\n",
+    "            distancia[j][i] = min (insersio,eliminacio,substitucio)\n",
+    "    \n",
+    "    return distancia[-1][-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 1, 2, 3, 4, 5], [1, 0, 0, 0, 0, 0], [2, 0, 0, 0, 0, 0], [3, 0, 0, 0, 0, 0], [4, 0, 0, 0, 0, 0], [5, 0, 0, 0, 0, 0], [6, 0, 0, 0, 0, 0]]\n",
-      "[[0, 1, 2, 3, 4, 5], [1, 1, 2, 3, 4, 5], [2, 2, 2, 3, 4, 5], [3, 3, 3, 0, 2, 4], [4, 4, 4, 2, 1, 3], [5, 5, 0, 2, 3, 0], [6, 6, 2, 0, 2, 2]]\n",
-      "[6, 6, 2, 0, 2, 2]\n",
-      "0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0"
+       "1"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "levenstheinsmithwaterman(\"BARBER\",\"VERVE\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
