--- a/Problemes/3.5.ipynb
+++ b/Problemes/3.5.ipynb
@@ -45,11 +45,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "def potencia2(num):\n",
+    "    binari = bin(num)\n",
+    "    binari = str(binari)\n",
+    "    comptador = 0\n",
+    "    for i in binari:\n",
+    "        if i == '1':\n",
+    "            comptador += 1\n",
+    "    if comptador <= 1 :\n",
+    "        return True\n",
+    "    elif comptador > 1:\n",
+    "        return False\n",
+    "\n",
     "    \"\"\"\n",
     "    Aquesta comprova si num és una potencia de 2.\n",
     "    \n",
@@ -68,14 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert potencia2(1024) == True\n",
     "assert potencia2(2**2345) == True\n",
-    "assert potencia2(2**2345-1) == False"
+    "assert potencia2((2**2345)-1) == False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -85,7 +104,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -99,12 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "b7d5521a80c2c370047c8b3946d4b51cbe9eac44fad1075e96f476b66b4a61cb"
-   }
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
