--- a/Problemes/3.6.ipynb
+++ b/Problemes/3.6.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 38,
    "metadata": {
     "id": "GFAk9cV3Uhzy"
    },
@@ -124,16 +124,17 @@
     "    Returns\n",
     "    columna: str\n",
     "    \"\"\"\n",
-    "    taula =  {'1':'A','2':'B','3':'C','4':'D',\n",
-    "             '5':'E','6':'F','7':'G','8':'H','9':'I',\n",
-    "             '10':'J','11':'K','12':'L','13':'M','14':'N',\n",
-    "             '15':'O','16':'P','17':'Q','18':'R','19':'S',\n",
-    "             '20':'T','21':'U','22':'V','23':'W','24':'X','25':'Y','26':'Z','0':'Z'}\n",
+    "    taula =  {'0':'A','1':'B','2':'C','3':'D',\n",
+    "             '4':'E','5':'F','6':'G','7':'H','8':'I',\n",
+    "             '9':'J','10':'K','11':'L','12':'M','13':'N',\n",
+    "             '14':'O','15':'P','16':'Q','17':'R','18':'S',\n",
+    "             '19':'T','20':'U','21':'V','22':'W','23':'X','24':'Y','25':'Z'}\n",
     "    llista = []\n",
     "    numero = num\n",
     "    columna = \"\"\n",
     "    potencia = 0\n",
-    "    while numero > 26:\n",
+    "\n",
+    "    \"\"\"while numero > 26:\n",
     "        numero /= 26\n",
     "        potencia +=1\n",
     "    numero = num\n",
@@ -141,31 +142,25 @@
     "        actual = potencia - i\n",
     "        llista.append(numero%(26**actual))\n",
     "        numero = numero - 26**actual\n",
-    "    llista.append(num%26)\n",
-    "    for i in llista:\n",
+    "    llista.append(num%26)\"\"\"\n",
+    "\n",
+    "    while numero > 0:\n",
+    "        numero -= 1\n",
+    "        llista.append(numero%26)\n",
+    "        numero //= 26\n",
+    "\n",
+    "    for i in llista[-1::-1]:\n",
     "        columna += taula[str(i)]\n",
     "    return columna\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 39,
    "metadata": {
     "id": "DIe-ltSWUhzy"
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[178], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m conversio_fulla_calcul(\u001b[38;5;241m26\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mZ\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m conversio_fulla_calcul(\u001b[38;5;241m27\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAA\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m conversio_fulla_calcul(\u001b[38;5;241m28\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAB\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m conversio_fulla_calcul(\u001b[38;5;241m29\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAC\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m conversio_fulla_calcul(\u001b[38;5;241m107\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDC\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert conversio_fulla_calcul(1) == 'A'\n",
     "assert conversio_fulla_calcul(25) == 'Y'\n",
@@ -188,22 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BB'"
+       "'AC'"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conversio_fulla_calcul(28)"
+    "conversio_fulla_calcul(29)"
    ]
   },
   {
