no puc messs =(

--- a/Problemes/4.8.ipynb
+++ b/Problemes/4.8.ipynb
@@ -31,15 +31,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "ngKWIkPKZtJP"
    },
    "outputs": [],
    "source": [
     "import itertools \n",
+    "import math\n",
     "\n",
     "def subsequencia_comu_v1(paraula1, paraula2):\n",
+    "    longitud = 0\n",
+    "    if paraula1 == \"\" or paraula2 == \"\":\n",
+    "        return 0\n",
+    "    if paraula1[-1]==paraula2[-1]:\n",
+    "        return 1 + (subsequencia_comu_v1(paraula1[0:-1], paraula2[0:-1]))\n",
+    "    else:\n",
+    "        s1 = subsequencia_comu_v1(paraula1[0:-1],paraula2)\n",
+    "        s2 = subsequencia_comu_v1(paraula1,paraula2[0:-1])\n",
+    "        if s1 > s2:\n",
+    "            return s1\n",
+    "        else:\n",
+    "            return s2\n",
+    "\n",
     "    \"\"\"\n",
     "    Aquesta funció identifica la longitud de la subseqüència mes llarga mitjançanat força bruta.\n",
     "    \n",
@@ -54,6 +68,11 @@
     "    \"\"\"\n",
     "    \n",
     "    def extreure_sub_sequencies(paraula):\n",
+    "        n = len(paraula)\n",
+    "        llista = []\n",
+    "        for i in n:\n",
+    "            llista += list(itertools.combinations(paraula,i+1))\n",
+    "        return llista\n",
     "  "
    ]
   },
@@ -102,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "kWKm3RJ_ZtJP"
    },
@@ -160,13 +179,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {
     "id": "auk2BrBtZtJP"
    },
    "outputs": [],
    "source": [
     "def subsequencia_comu_v3(cadena1, cadena2):\n",
+    "    llista = []\n",
+    "    for i in (range(len(cadena1)+1)):\n",
+    "        columna = []\n",
+    "        for j in range((len(cadena2)+1)):\n",
+    "            columna.append(0)\n",
+    "        llista.append(columna)\n",
+    "    \n",
+    "    for i in range(len(llista)):\n",
+    "        valor = 0\n",
+    "        for j in range(len(llista[i])):\n",
+    "            if llista[0][i] == llista [j][0]:\n",
+    "                valor += 1\n",
+    "            llista[i][j]=valor\n",
+    "    print (llista)\n",
+    "    return llista[-1][-1]\n",
+    "\n",
     "    \"\"\"\n",
     "    Aquesta funció identifica la longitud de la subseqüència\n",
     "    compartida més llarga. \n",
@@ -187,13 +222,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "LctIuThEZtJP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[43msubsequencia_comu_v3\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mXMJYAUZ\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMZJAWU\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m4\u001b[39m\n",
+      "Cell \u001b[1;32mIn[21], line 12\u001b[0m, in \u001b[0;36msubsequencia_comu_v3\u001b[1;34m(cadena1, cadena2)\u001b[0m\n\u001b[0;32m     10\u001b[0m valor \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(llista[i])):\n\u001b[1;32m---> 12\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mllista\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m==\u001b[39m llista [j][\u001b[38;5;241m0\u001b[39m]:\n\u001b[0;32m     13\u001b[0m         valor \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m     14\u001b[0m     llista[i][j]\u001b[38;5;241m=\u001b[39mvalor\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "assert subsequencia_comu_v3('XMJYAUZ','MZJAWU') == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 1, 1, 1, 1], [0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subsequencia_comu_v3('XMJYAUZ','MZJAWU')"
    ]
   },
   {
@@ -213,7 +288,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
