--- a/5.11.ipynb
+++ b/5.11.ipynb
@@ -29,13 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "VQDcKJncjbqc"
    },
    "outputs": [],
    "source": [
     "def elements_pic(llista):\n",
+    "    if len(llista)<2:\n",
+    "        return llista[0]\n",
+    "    if llista[0]>llista[1]:\n",
+    "        posicio = llista[0]\n",
+    "    else: \n",
+    "        posicio = elements_pic(llista[1:])\n",
+    "            \n",
+    "\n",
+    "\n",
     "    \"\"\"\n",
     "    Aquesta funció retorna l'element d'una llista\n",
     "    \n",
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "f5G46sbNjbqc"
    },
@@ -63,6 +72,31 @@
     "assert elements_pic([9, 5, 2]) == 9\n",
     "assert elements_pic([1, 2, 7, 8]) == 8"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 5, 8]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -72,7 +106,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
