--- a/5.5.ipynb
+++ b/5.5.ipynb
@@ -27,13 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "MEJsO5eCiQai"
    },
    "outputs": [],
    "source": [
     "def quants_1(llistaBinaria):\n",
+    "    num1s = 0\n",
+    "    for i in llistaBinaria:\n",
+    "        if i == 1:\n",
+    "            num1s += 1\n",
     "    \"\"\"\n",
     "    Aquesta funció troba de manera eficient el nombre d'1s que conté una llista.\n",
     "    \n",
@@ -53,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "SoIOTpzNiQai"
    },
@@ -64,6 +68,13 @@
     "assert quants_1([0, 0, 0, 0, 0, 0, 0])  == 0\n",
     "assert quants_1([1, 1, 1])  == 3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -73,7 +84,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -87,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
