--- a/Problemes/5.3.ipynb
+++ b/Problemes/5.3.ipynb
@@ -1,1 +1,445 @@
-{"cells":[{"cell_type":"markdown","metadata":{"id":"TZmUuMEEhkf6"},"source":["# Capítol 5 - Dividir i Vèncer"]},{"cell_type":"markdown","metadata":{"id":"cCaw6ElfhkgC"},"source":["### 5.3 Seqüència capícua més llarga"]},{"cell_type":"markdown","metadata":{},"source":["Escriu una funció que donada una cadena trobi la llargada de la subseqüència capicua més llarga de manera òptima. "]},{"cell_type":"code","execution_count":null,"metadata":{"id":"CD8fbLMahkgC"},"outputs":[],"source":["def subs_capicua_opt(cadena, solucions = {}):\n","    \"\"\"\n","    Aquesta funció troba la subseqüència més llarga capícua\n","    d'una cadena donada de manera òptima amb programació dinàmica\n","    \n","    Parameters\n","    ----------\n","    cadena: string\n","    solucions: dict\n","        diccionari que conté la memòria de solucions \n","        per optimitzar el rendiment\n","    \n","    Returns\n","    -------\n","    longitud: int\n","    \"\"\"\n","     return longitud"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"T73jzsLwhkgD"},"outputs":[],"source":["assert subs_capicua_opt(\"APXPRABARXP\") == 9"]}],"metadata":{"colab":{"collapsed_sections":[],"name":"5.3.ipynb","provenance":[]},"kernelspec":{"display_name":"Python 3","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.8.10"}},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "TZmUuMEEhkf6"
+   },
+   "source": [
+    "# Capítol 5 - Dividir i Vèncer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "cCaw6ElfhkgC"
+   },
+   "source": [
+    "### 5.3 Seqüència capícua més llarga"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escriu una funció que donada una cadena trobi la llargada de la subseqüència capicua més llarga de manera òptima. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "CD8fbLMahkgC"
+   },
+   "outputs": [],
+   "source": [
+    "def subs_capicua_opt(cadena, solucions = {}):\n",
+    "   longitud = 0\n",
+    "   solucions = {'control': 0}\n",
+    "   if len(cadena)>1:\n",
+    "       \n",
+    "      if cadena[0] == cadena [-1]:\n",
+    "         longitud +=2\n",
+    "         solucions['control'] += longitud\n",
+    "         print(solucions['control'])\n",
+    "         longitud += subs_capicua_opt(cadena[1:-1],solucions)\n",
+    "\n",
+    "      else:\n",
+    "         longitud += max(subs_capicua_opt(cadena[:-1],solucions),subs_capicua_opt(cadena[1:],solucions))\n",
+    "         longitud += - solucions['control']\n",
+    "         print(longitud)\n",
+    "         solucions['control'] = 0\n",
+    "   else:\n",
+    "       longitud += 1\n",
+    "   return longitud\n",
+    "    \n",
+    "   \"\"\"\n",
+    "    Aquesta funció troba la subseqüència més llarga capícua\n",
+    "    d'una cadena donada de manera òptima amb programació dinàmica\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    cadena: string\n",
+    "    solucions: dict\n",
+    "        diccionari que conté la memòria de solucions \n",
+    "        per optimitzar el rendiment\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    longitud: int\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "id": "T73jzsLwhkgD"
+   },
+   "outputs": [],
+   "source": [
+    "assert subs_capicua_opt(\"APXRABARXP\") == 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subs_capicua_opt(\"AQBABAQ\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "5\n",
+      "5\n",
+      "5\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "5\n",
+      "7\n",
+      "7\n",
+      "2\n",
+      "2\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n",
+      "2\n",
+      "2\n",
+      "5\n",
+      "9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subs_capicua_opt(\"APXPRABARXP\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "name": "5.3.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
