mult matrius i demes merdes

--- a/Problemes/5.3.ipynb
+++ b/Problemes/5.3.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "id": "CD8fbLMahkgC"
    },
@@ -48,7 +48,7 @@
     "         longitud += - solucions['control']\n",
     "         solucions['control'] = 0\n",
     "   else:\n",
-    "       longitud += 1\n",
+    "       return 1\n",
     "   return longitud\n",
     "    \n",
     "   \"\"\"\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "id": "T73jzsLwhkgD"
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "9"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
